fix: Set max-width on images and preformatted text in order to avoid horizontal scrolling on mobile screens

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -81,6 +81,15 @@
     @media screen and (min-width: @breakpoint-lg) {
         margin-top: 90px;
     }
+
+    img {
+        max-width: 100%;
+    }
+
+    pre {
+        overflow: auto;
+        max-width: 100%;
+    }
 }
 
 .sb1ds-section {
